syntax = "proto3";

package mybackend.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "./internal/api_proto/v1";
//option go_package = "github.com/zackmwangi/shell_golang_svc/internal/api_proto/v1";

//#####################

service MybackendGrpcSvc{
    rpc GetUserInfoById (GetUserInfoByIdRequest) returns (GetUserInfoByIdResponse){
        option (google.api.http) = {
            get: "/v1/user/byid",
          };
    }
    rpc GetUserInfoByUsername (GetUserInfoByUsernameRequest) returns (GetUserInfoByUsernameResponse){
        option (google.api.http) = {
            get: "/v1/user/byusername",
          };
    }
}

//#######
message Error{
    uint32 code = 1;
    string message = 2;
}

//#######

message GetUserInfoByIdRequest{
    string userId = 1;
}

message GetUserInfoByIdResult{
    string userId = 1;
    string userName = 2;
    string userFirstname = 3;
}

message GetUserInfoByIdResponse{
    Error error = 1;
    GetUserInfoByIdResult result = 2;
    
}

//###

message GetUserInfoByUsernameRequest{
    string userName= 1;
}

message GetUserInfoByUsernameResult{
    string userName = 1;
    string userId = 2;
    string userFirstname = 3;
    
}

message GetUserInfoByUsernameResponse{
    Error error = 1;
    GetUserInfoByUsernameResult result = 2;  
}

